[package]
name = "mqttea-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.76", features = ["full", "extra-traits"]}
# syn = { version = "2.0.76" }
quote = "1.0.37"
proc-macro2 = { version = "1.0.86", default-features = false }
thiserror = "=1.0.24"

[dev-dependencies]
trybuild = "1.0.99"