[package]
name = "asyncx"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
publish = false
license = "MIT OR Apache-2.0"
version = "0.0.0"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
smol = { version = "2.0.2", features = [] }
async-std = "1.10"
tokio-util = { version = "0.7.13", features= ["compat"]}
mqttea_core = { path = "../../mqttea-core" }
dotenvy = "0.15.7"

[[example]]
name = "tokio"
path = "src/tokio.rs"

[[example]]
name = "smol"
path = "src/smol.rs"

[[example]]
name = "async-std"
path = "src/async-std.rs"
